--- a/linear_transformation.ipynb
+++ b/linear_transformation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widgets\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
